<resources>
    <string name="app_name">nectar</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_user">Create User</string>
    <string name="username">Username</string>
    <string name="username_password_warning">Please enter a username and password.</string>
    <string name="settings">Settings</string>
    <string name="Profile">Profile</string>
    <string name="filter">Film Filters</string>
    <string name="user">User</string>
    <string name="add_user">Search For Another User</string>
    <string name="no_results">No results.</string>
    <string name="runtime">Runtime</string>
    <string name="rating">Rating</string>
    <string name="genre">Genre</string>
    <string name="release_year">Release Year</string>
    <string name="enable_filtering">Enable Filtering</string>
    <string name="runtime_mins_format">%1$d mins</string>

    <string name="added_as_a_friend">%1$s has added you as a friend!</string>
</resources>