<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <EditText
        android:id="@+id/fragment_login_edittext_username"
        android:hint="@string/username"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="username"/>

    <EditText
        android:id="@+id/fragment_login_edittext_password"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="password" />

    <Button
        android:id="@+id/fragment_login_button_login"
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/fragment_login_button_createuser"
        android:text="@string/create_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>