<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        xmlns:custom="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enable_filtering"/>

            <CheckBox
                android:id="@+id/fragment_filter_checkBox_enableFiltering"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <TextView
            android:id="@+id/fragment_filter_textview_runtime"
            android:text="@string/runtime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/FilterHeading" />

        <com.vanspoof.nectar.view.NumpickerView
            android:id="@+id/fragment_filter_numpickerView_runtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end" />

        <TextView
            android:id="@+id/fragment_filter_textview_genre"
            android:text="@string/genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/FilterHeading" />

        <GridLayout
            android:id="@+id/fragment_filter_gridLayout_genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:columnCount="4">

        </GridLayout>

        <TextView
            android:id="@+id/fragment_filter_textview_rating"
            android:text="@string/rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/FilterHeading" />

        <LinearLayout
            android:id="@+id/fragment_filter_linearLayout_rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <TextView
            android:id="@+id/fragment_filter_textview_releaseYear"
            android:text="@string/release_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/FilterHeading" />

        <LinearLayout
            android:id="@+id/fragment_filter_linearLayout_releaseYear"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="200dp">

            <com.vanspoof.nectar.view.NumpickerView
                android:id="@+id/fragment_filter_numpickerView_releaseYearStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:text="between"
                android:textAllCaps="true"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.vanspoof.nectar.view.NumpickerView
                android:id="@+id/fragment_filter_numpickerView_releaseYearEnd"
                android:gravity="end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>